--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="orange">#ed5f1e</color>
+    <color name="green">#1cac78</color>
+    <color name="orange">#1cac78</color>
+    <color name="bkgrnd">#FFDEF1EA</color>
 </resources>
